--- a/styles/sass/sass/partials/_sections.scss
+++ b/styles/sass/sass/partials/_sections.scss
@@ -1,8 +1,7 @@
 
 .response {
-// border: 2px solid red;
-min-height: 28vh;
-// min-height: 17vh;
+min-height: 35vh;
+// min-height: 28vh;
 position: relative;
 }
 
